# benchgauge

./: .gitignore  CONTRIBUTING.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.d2
src/benchgauge/: __init__.py  cli.py  errors.py  gate.py  gauge.py  model.py  results.py
src/benchgauge/ingest/: __init__.py  native.py
src/benchgauge/ingest/adapters/: __init__.py  base.py  lm_eval.py  open_llm_leaderboard.py
src/benchgauge/irt/: __init__.py  backends.py  fit.py  forensics.py
src/benchgauge/metrology/: __init__.py  cluster.py  resolution.py
src/benchgauge/rankstability/: __init__.py  paired.py  verdict.py
src/benchgauge/report/: __init__.py  card.py
src/benchgauge/selfcheck/: __init__.py  synth.py
tests/: test_cli.py  test_gate.py  test_ingest.py  test_irt.py  test_metrology.py  test_model.py  test_parquet.py  test_rankstability.py  test_report.py
tests/fixtures/: healthy.json  unhealthy.json
tests/fixtures/lm_eval/modelA/: samples_arc_easy_2026-01-01T00-00-00.000000.jsonl
tests/fixtures/lm_eval/modelB/: samples_arc_easy_2026-01-01T00-00-00.000000.jsonl
